--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^4.2.1
+  url_launcher: ^6.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
