--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,16 @@ dependencies:
     sdk: flutter
   carousel_slider: ^4.2.1
   url_launcher: ^6.2.0
+  firebase_core: ^2.22.0
+  firebase_auth: ^4.14.0
+  google_sign_in: ^6.1.6
+  path_provider: ^2.1.1
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
+  get_it:
+  http: ^1.1.0
+  flutter_svg: ^2.0.9
+  firebase_database: ^10.3.5
 
 
   # The following adds the Cupertino Icons font to your application.
